hot-fix: test to avoid a flicker effect

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -13,6 +13,7 @@
         --black: 34,34,34;
         --main-200: 224,218,229;
         --egg: 253,248,238;
+        --main-500: 179, 163, 192;
         --main-600: 143,130,153;
         --main-700: 107,97,115;
         --main-800: 71,65,76;
@@ -26,6 +27,7 @@
     .top-bottom-wave path {
         fill: theme('colors.main-200');
     }
+
 
     #background
     {
@@ -115,6 +117,7 @@
     --black: 34,34,34;
     --egg: 253,246,213;
     --main-200: 71,65,76;
+    --main-500: 179, 163, 192;
     --main-600: 224,218,229;
     --main-700: 107,97,115;
     --main-800: 71,65,76;
@@ -202,6 +205,49 @@
     box-sizing: border-box;
 }
 
+
+
+
+    //navlinks
+    .nav-link {
+        position: relative;
+        transition: color 0.2s ease-out;
+    }
+    
+    .nav-link:before, .nav-link:after
+    {
+        position: absolute;
+        left: 0px;
+        width: 100%;
+        height: 2px;
+        background: theme("colors.egg");
+        content: "";
+        opacity: 0;
+        transition: all 0.3s ease-out;
+    }
+    
+    .nav-link:before
+    {
+        top: 0px;
+        transform: translateY(5px);
+    }
+    
+    .nav-link:after
+    {
+        bottom: 0px;
+        transform: translateY(-5px);
+    }
+    
+    .nav-link:hover:before, .nav-link:hover:after
+    {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+    
+    .nav-link:hover {
+        color: theme('colors.egg');
+    }
+
 h1,
 h2,
 h3,
@@ -282,45 +328,7 @@ a {
     border: 1px solid theme('colors.main-700');
 }
 
-//navlinks
-.nav-link {
-    position: relative;
-    transition: color 0.2s ease-out;
-}
 
-.nav-link:before, .nav-link:after
-{
-    position: absolute;
-    left: 0px;
-    width: 100%;
-    height: 2px;
-    background: theme("colors.egg");
-    content: "";
-    opacity: 0;
-    transition: all 0.3s ease-out;
-}
-
-.nav-link:before
-{
-    top: 0px;
-    transform: translateY(5px);
-}
-
-.nav-link:after
-{
-    bottom: 0px;
-    transform: translateY(-5px);
-}
-
-.nav-link:hover:before, .nav-link:hover:after
-{
-    opacity: 1;
-    transform: translateY(0px);
-}
-
-.nav-link:hover {
-    color: theme('colors.egg');
-}
 
 //Transition: Button with a border + alert button
 .btn-transition-border, .btn-transition-border-alert {
